infra/k8s/api-tasks-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-tasks-depl
  namespace: dcl-tasks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-tasks
  template:
    metadata:
      labels:
        app: api-tasks
    spec:
      containers:
        - name: api-tasks
          image: clschalkwyk/dcl-api-tasks
---
apiVersion: v1
kind: Service
metadata:
  name: api-tasks-srv
  namespace: dcl-tasks
spec:
  selector:
    app: api-tasks
  ports:
    - name: api-tasks
      protocol: TCP
      port: 3000
      targetPort: 3000
