infra/k8s/api-tasks-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-tasks-mongo-depl
  namespace: dcl-tasks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-tasks-mongo
  template:
    metadata:
      labels:
        app: api-tasks-mongo
    spec:
      containers:
        - name: api-tasks-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: api-tasks-mongo-srv
  namespace: dcl-tasks
spec:
  selector:
    app: api-tasks-mongo
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
      name: db
