infra/k8s/api-users-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-users-depl
  namespace: dcl-tasks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-users
  template:
    metadata:
      labels:
        app: api-users
    spec:
      containers:
        - name: api-users
          image: clschalkwyk/dcl-api-users
---
apiVersion: v1
kind: Service
metadata:
  name: api-users-srv
  namespace: dcl-tasks
spec:
  selector:
    app: api-users
  ports:
    - name: api-users
      protocol: TCP
      port: 3000
      targetPort: 3000
