infra/k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
#    nginx.ingress.kubernetes.io/configuration-snippet: |
#      internal;
#      rewrite ^ $original_uri break;
#    nginx.ingress.kubernetes.io/server-snippet: |
#      location /api/auth/users {
#        if ( $request_method == POST) {
#          set $target_destination '/_write';
#        }
#        set $original_uri $uri;
#        rewrite ^ $target_destination last;
#      }
spec:
  rules:
    - host: dcltask.dev
      http:
        paths:
          - path: /api/auth/?(.*)
            backend:
              serviceName: api-users-srv
              servicePort: 3000
          - path: /api/tasks/?(.*)
            backend:
              serviceName: api-tasks-srv
              servicePort: 3000
